laborations/lab2/testsuite/bad/bad133.cc
int main() {
  if (1.0) {

  } else {}
  return 0;
}
